force-app/main/default/objects/Customer_Reference__c/Customer_Reference__c.object-meta.xml
<CustomObject>
    <description>A junction object which exists to link contacts to specific requests</description>
    <label>Customer Reference</label>
    <nameField>
        <displayFormat>CR-{0000}</displayFormat>
        <label>Customer Reference Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer References</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>