force-app/main/default/objects/Customer_Reference__c/fields/Contacts_Added__c.field-meta.xml
<CustomField>
    <fullName>Contacts_Added__c</fullName>
    <description>This is a field for creating a contact table to use in the html email template</description>
    <label>Contacts_Added_Table</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>