force-app/main/default/objects/Customer_Reference__c/fields/Customer_Reference_Request__c.field-meta.xml
<CustomField>
    <fullName>Customer_Reference_Request__c</fullName>
    <label>Customer Reference Request</label>
    <referenceTo>Customer_Reference_Requests__c</referenceTo>
    <relationshipLabel>Customer References</relationshipLabel>
    <relationshipName>Customer_References</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>