force-app/main/default/objects/Customer_Reference__c/fields/Introduced_Sales_Rep_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Introduced_Sales_Rep_to_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is mandatory when the reference request is Not an RFP request</description>
    <label>Introduced Sales Rep to Customer</label>
    <type>Checkbox</type>
</CustomField>