force-app/main/default/objects/Customer_Reference__c/fields/Reference_Notes__c.field-meta.xml
<CustomField>
    <fullName>Reference_Notes__c</fullName>
    <description>For AM&apos;s to add particular notes about a reference when assigning</description>
    <label>Reference Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>